--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="css/all.css">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>  
+  <script src="sw.js"></script>
 </head>
 
 <body>
