--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="icon" href="images/piano.png">
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="css/all.css">
-  <!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
-  <script src="vendor/vue.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="sw.js"></script>
 </head>
 
